# project-daisy-pc

./: .gitmodules  CMakeLists.txt  LICENSE  Project Daisy PC Edition.sln  Project Daisy PC Edition.vcxproj  Project Daisy PC Edition.vcxproj.filters  Project Daisy.csproj  Project Daisy.sln  README.md  Resource.aps  Resource.rc  collision.cxx  credits.txt  export_presets.cfg  game.cxx  icon.png.import  icon.svg.import  jukebox.cxx  main.cxx  prefs.cxx  project.godot  resources.cxx  savescrn.cxx  structs.cxx  title.cxx  utils.cxx  version.cxx
Audio/Music/: cli2.ogg.import  gameover.ogg.import  prefs.ogg.import  title.ogg.import
Audio/SFX/: back.wav.import  jump.wav.import  land.wav.import  sad.wav.import  select.wav.import
Docs/: credits.md
Fonts/: daisy.ttf.import  fontcfg.tres  license.txt
Images/: titlebg.png.import
Images/bsod/: frown.png.import
Images/title/: title_md.png.import  titlebg.png.import
Scenes/: bsod.tscn  fade_scene.tscn  player_nodes.tscn  savescrn.tscn  test_level.tscn  title.tscn
Source/: Sonic.gd  bsod.cs  bsod.gd  enum.cs  savescrn.cs  sharp-src.tar.xz  structs.cs  title.cs  title.gd  utils.cs  vars.cs
Tilesets/: testlvl.png.import  testlvltiles.tres
docs/: credits.md  errors.md
inc/: collision.hxx  game.hxx  includes.hxx  jukebox.hxx  prefs.hxx  resources.hxx  savescrn.hxx  structs.hxx  title.hxx  types.hxx  utils.hxx  version.hxx
res/fonts/: license.txt  readme.txt
res/maps/: Levels.tiled-session  test.tmx
res/mus/: cli2.flac  s3clear.flac
res/sfx/: back.flac  ding.flac  hover.flac  jump.flac  select.flac  splash.flac
(+10 files in other folders)
